# image-slash-star

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE.md  README.md  SECURITY.md  build.rs  deny.toml  manifest.yaml  oracle-requirements.txt  pillow-oracle.lock.yaml  rustfmt.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: avif-implementation-plan.md  coverage-branch-attack-plan.md  coverage-region-sweep.md  coverage-sweep-active.md  image-backend-full-code-review.md  image-backend-migration-completion-audit.md  image-backend-migration-spec.md  lazy-loading-correctness-proposal.md
scripts/: build_avif_stack.sh  generate_decode_refs.py  generate_test_assets.py  libwebp_fixture_encoder.c
src/: decode.rs  encode.rs  encode_options.rs  lib.rs  source.rs
src/codecs/: mod.rs
src/codecs/avif/: decode.rs  encode.rs  inspect.rs  mod.rs  native.rs
src/codecs/bmp/: decode.rs  encode.rs  inspect.rs  mod.rs
src/codecs/compression/: deflate.rs  mod.rs  zlib_ng.rs
src/codecs/gif/: decode.rs  encode.rs  inspect.rs  mod.rs
src/codecs/ico/: decode.rs  encode.rs  inspect.rs  mod.rs
src/codecs/jpeg/: inspect.rs  mod.rs
src/codecs/png/: decode.rs  encode.rs  inspect.rs  mod.rs
src/codecs/tiff/: decode.rs  encode.rs  inspect.rs  mod.rs
src/codecs/webp/: decode.rs  (+2 more)
src/compression/: deflate.rs
src/decode/: avif.rs  bmp.rs  gif.rs  ico.rs  mod.rs  png.rs  tiff.rs  webp.rs
src/encode/: gif.rs  mod.rs  png.rs  tiff.rs
src/types/: buffer.rs  dynamic.rs  error.rs  mod.rs
src/webp_native/: alpha_blending.rs  decoder.rs  encoder.rs  extended.rs  huffman.rs  loop_filter.rs  lossless.rs  lossless_transform.rs  mod.rs  vp8.rs  vp8_arithmetic_decoder.rs
tests/: coverage_matrix_tests.rs  feature_gate_tests.rs
tests/fixtures/: coverage_matrix.json  pil_quant_tables.json
(+208 files in other folders)
